# kanban-app

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  auth.py  board.py  config.py  mail.py  main.py  rate_limit.py  schemas.py  verification.py
backend/app/db/: database.py  models.py  seed.py
backend/app/routes/: account.py  ai.py  auth.py  board.py  registration.py
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_board.py  test_password_reset.py  test_production.py  test_register.py
docs/: DATABASE.md  PLAN-PHASE2.md  PLAN.md  TESTING-EMAIL.md  code_review.md  schema.json
frontend/: AGENTS.md  playwright.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: AccountSettingsModal.tsx  App.test.tsx  App.tsx  BoardSkeleton.tsx  CardEditModal.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx  ConfirmModal.tsx  ForgotPasswordForm.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  KanbanHeader.tsx  LoginForm.test.tsx  LoginForm.tsx  NewCardForm.tsx  OnboardingBanner.tsx  ThemeToggle.tsx  Toast.tsx  VerifyEmailForm.tsx  useBoardData.ts  useBoardMutations.ts
frontend/src/lib/: api.ts  kanban.ts  theme.tsx
frontend/src/test/: test-utils.tsx
frontend/test-results/: .last-run.json
frontend/tests/: auth.spec.ts  chat.spec.ts  helpers.ts  kanban.spec.ts  persistence.spec.ts  register.spec.ts
scripts/: AGENTS.md  e2e-server.sh  start.ps1  start.sh  stop.ps1  stop.sh
