[project]
name = "pm-backend"
version = "0.1.0"
description = "Project Management MVP backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "itsdangerous>=2.2",
    "sqlalchemy>=2.0",
    "bcrypt>=4.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
